Уведомления от себя больше не приходят. Проверка фикса прочтения уведомлений